--- a/templates/sigin.html
+++ b/templates/sigin.html
@@ -40,11 +40,11 @@
 		    		<div class="row d-flex">
 		    			<div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-						    <span class="text">+91 9923017199</span>
+						    <span class="text">+91 8090123070</span>
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-						    <span class="text">bhagyashripatil7601@gmail.com</span>
+						    <span class="text">GoFresh123@gmail.com</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
 						    <span class="text">24*7 hours delivery &amp; Free Returns</span>
@@ -127,7 +127,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Kokane chowk,rahatni road,pimple Saudagar, Pimpri Chinchwad, Pune, Maharashtra, India</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9923017199</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8090123070</span></a></li>
 	              </ul>
 	            </div>
             </div>
