--- a/templates/cart.html
+++ b/templates/cart.html
@@ -54,10 +54,8 @@
                            <dd class="text-right">Rs{{total}}</dd>
                         </dl>
                         <hr>
-                       <p class="text-center mb-3">
-                           <img src="{% static './images/misc/payments.png' %}" height="26">
-                       </p>
-                       <a href="{% url 'place_order' %}" class="btn btn-primary btn-block"> Checkout </a>
+
+                       <a href="{% url 'payment' %}" class="btn btn-primary btn-block"> Checkout </a>
                        <a href="{% url 'shopping' %}" class="btn btn-light btn-block">Continue Shopping</a>
                    </div> <!-- card-body.// -->
                 </div> <!-- card.// -->
