--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
   <head>
 
@@ -47,7 +47,7 @@
 						    <span class="text">GoFresh123@gmail.com</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-						    <span class="text">24*7 hours delivery &amp; Free Returns</span>
+						    <span class="text">24 * 7 hours delivery & Free Returns</span>
 					    </div>
 
 				    </div>
@@ -55,45 +55,19 @@
 		    </div>
 		  </div>
     </div>
-        <div style="margin-left:300px;height:400px;width:800px;background-color:#e6faff;margin-top:50px;"><br>
-                  <h3 style="margin-left:250px;"><I>Register Yourself</I></h3>
-    <form method="POST"  novalidate>
-       <center>
-        <table style="margin-top:-100px;">
+<br>
+   <div style="margin-left:500px;height:300px;width:600px;background-color:#e6faff; margin-top:30px;"><br>
+  <h2 style="margin-left:250px;"><I>Your Feedback Is Received.... </I></h2>
+      <h2 style="margin-left:250px;"><I>Thank You {{user}} !!</I></h2>
 
- {% csrf_token %}
- {% for fm in form  %}
-            <tr>
-                <td>{{fm.label_tag}}</td>
-                <td>{{fm}}</td>
-                <td>{{fm.errors}}</td><br>
-</tr>
- {% endfor %}
-             </table>
-       </center>
- <input type="submit" value="Register" style="margin-left:400px;">
+  </div>
 
-</form>
-
-        </div>
-
-
-
-                        <div class="panel-heading"  >
-                        <h6 class="panel-title text-center"><a href="{% url 'signin' %}">Already have account Sign in here</a></h6>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-<footer class="ftco-footer ftco-section">
+  <footer class="ftco-footer ftco-section">
       <div class="container">
 
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-
 
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -108,7 +82,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Shop</a></li>
                 <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Blog</a></li>
+                <li><a href="#" class="py-2 d-block">Journal</a></li>
                 <li><a href="#" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
@@ -132,11 +106,12 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Location</h2>
+            	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Kokane chowk,rahatni road,pimple Saudagar, Pimpri Chinchwad, Pune, Maharashtra, India</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 8090123070</span></a></li>
+
 	              </ul>
 	            </div>
             </div>
@@ -166,10 +141,7 @@
   <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
   <script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
   <script src="{% static 'js/scrollax.min.js' %}"></script>
-
-  <script src="{% static 'js/google-map.js' %}"></script>
+        <script src="{% static 'js/google-map.js' %}"></script>
   <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
-
-
